fixed the date and about spacing

--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -75,24 +75,24 @@ h1 {
 
  
 }
-/* .onlyCountdown {
-    width: 100%;
-    display: grid;
-place-items: center;
-text-align: center;
 
-} */
 .homeRightContainer{
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows:1fr 2fr;
+    gap: 1em;
 }
 .countDownPlacer{
     place-items: center;
     text-align: center;
-    min-height: 80vh;
+    /* height: 80%; */
     display: grid;
 }
-
+@media screen and (min-width:1200px) {
+    .countDownPlacer{
+        height: 80vh;
+    }
+    
+}
 .aboutContainer{
     justify-self: center;
     display: flex;
@@ -108,7 +108,7 @@ text-align: center;
 }
 
 .aboutGroup{
-    padding-bottom: 10%;
+    /* padding-bottom: 10%; */
 }
 .datePlace,.date{
     font-family: 'PrettyBoy-SemiBold';
@@ -122,27 +122,10 @@ text-align: center;
     color: #FEEBD7 ;
     /* text-shadow: 0.5px 0.5px 0px #FEEBD7; */
 }
-@media screen and (max-width: 920px) {
-    .aboutGroup{
-        padding-top: 7em
-    }
-
-    
-}
 
 @media screen and (max-width: 680px) {
-    .datePlace{
-        padding-bottom: 2em;
-    }
-    /* .countDown{
-        padding-bottom: 2em;
-    } */
-    .aboutGroup{
-        padding-top: 9em
-    }
     .aboutTitle{
         display: none;
     }
 
 }
-    
